--- a/domain.yml
+++ b/domain.yml
@@ -1,22 +1,23 @@
-%YAML 1.1
----
 actions:
 - utter_animar
 - utter_ayuda
 - utter_despedida
 - utter_feliz
+- utter_respuesta_plazos_inscripcion
 - utter_respuesta_requisito_inscripcion
 - utter_saludo
 entities:
 - documentacion
+- plazos
 intents:
+- plazos_inscripcion
+- saludo
 - despedida
 - requisitos_inscripcion
-- saludo
 - documentacion_inscripcion
 - afirmacion
 - negacion
-templates:
+responses:
   utter_animar:
   - image: https://i.imgur.com/nGF1K8f.jpg
     text: 'Here is something to cheer you up:'
@@ -26,14 +27,19 @@ templates:
   - text: Espero haberte ayudado hasta la proxima.
   utter_feliz:
   - text: Great carry on!
+  utter_respuesta_plazos_inscripcion:
+  - text: La Universidad Gastón Dachary abre las inscripciones a partir de septiembre
+      y hasta marzo en todas sus carreras. Además, la carrera de Contador Nacional
+      Público tiene un período excepcional de inscripción en junio, cuyo cursillo
+      se realiza en julio y el inicio de clases en agosto.
   utter_respuesta_requisito_inscripcion:
-  - text: "Para poder inscribirte debes presentar el Documento Nacional del Identidad
+  - text: Para poder inscribirte debes presentar el Documento Nacional del Identidad
       (DNI) actualizado y las fotocopias del mismo, fotocopia autenticada de la partida
       de nacimiento, título de estudios secundarios y fotocopia del mismo o constancia
       de título en trámite. También debes presentar certificado de buena salud y grupo
       sanguíneo, cuatro fotos 4x4 y una carpeta colgante. Para inscribirte al curso
       anticipado de ingreso debes presentar una constancia de estar cursando el último
-      año del Polimodal o Nivel Medio."
-      
+      año del Polimodal o Nivel Medio.
   utter_saludo:
   - text: Hola soy Felix el asistente de la universidad UGD. En que puedo ayudarte?
+
