2do grupo de preguntas frecuentes - ¿Hay becas? ¿Hay bonificación para hermanos?

--- a/domain.yml
+++ b/domain.yml
@@ -9,8 +9,10 @@ actions:
 - utter_respuesta_plazos_inscripcion
 - utter_respuesta_requisito_inscripcion
 - utter_saludo
-- utter_respuesta_informacion_modalidad_inscripcion
+- utter_respuesta_informar_modalidad_inscripcion
 - utter_respuesta_visitas_consultas
+- utter_respuesta_informar_becas_hermanos
+
 entities:
 - certificadas
 - curso
@@ -18,6 +20,8 @@ entities:
 - plazos
 - modalidad_inscripcion
 - visitas
+- becas_hermanos
+
 intents:
 - despedida
 - agradecimiento
@@ -29,8 +33,10 @@ intents:
 - requisitos_inscripcion
 - afirmacion
 - negacion
-- informacion_modalidad_inscripcion
+- informar_modalidad_inscripcion
 - visitas_consultas
+- informar_becas_hermanos
+
 responses:
   utter_agradecimiento:
   - text: De nada espero haberte ayudado! Estoy a disposicion por cualquier consulta.
@@ -88,10 +94,13 @@ responses:
       año del Polimodal o Nivel Medio.
   utter_saludo:
   - text: Hola soy Felix el asistente de la universidad UGD. En que puedo ayudarte?
-  utter_respuesta_informacion_modalidad_inscripcion:
+  utter_respuesta_informar_modalidad_inscripcion:
   - text: La inscripción es un trámite personal, y en el caso de menores de 21 años, debe estar presente el padre para suscribir la ficha de inscripción.
   utter_respuesta_visitas_consultas:
   - text: 'Las puertas de la UGD están abiertas para todo aquel que desee conocerla. Se puede visitar la universidad y las autoridades están abiertas a informar sobre ella y atender cualquier consulta. Es conveniente solicitar un horario previamente para tener la seguridad que la persona que uno quiere contactar esté presente en ese momento.'
+  utter_respuesta_informar_becas_hermanos:
+  - text: 'La Universidad cuenta con un sistema de becas al que el alumno puede acceder cumpliendo con una serie de requisitos. Existe una beca por hermanos, que consiste en una bonificación del 15% de la cuota a uno de los hermanos.'
+
 session_config:
   carry_over_slots_to_new_session: true
   session_expiration_time: 0
