--- a/data/rules.yml
+++ b/data/rules.yml
@@ -1,4 +1,12 @@
-# rules:
+rules:
+  - rule: mensaje out-of-scope
+    steps:
+    - intent: out_of_scope
+    - action: utter_out_of_scope
+  - rule: Le pide al usuario que reformule la oración cuando el mensaje que envió tiene un confianza de NLU baja
+    steps:
+    - intent: nlu_fallback
+    - action: utter_please_rephrase
 #  - rule: activate subscribe form
 #    steps:
 #    - intent: subscribe
