--- a/domain.yml
+++ b/domain.yml
@@ -1,34 +1,58 @@
 version: '2.0'
+config:
+  store_entities_as_slots: true
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
 intents:
-- afirmacion
-- agradecimiento
-- despedida
-- negacion
-- saludo
-- requisitos_inscripcion
-- informar_servicios
-- informar_equipamiento_tecnologico
-- informar_asistencia
-- informar_examen_recuperatorio
-- informar_equivalencias
-- informar_intercambio_de_estudio
-- curso_ingreso
-- certificadas
-- evaluacion_coneau
-- plazos_inscripcion
-- informar_modalidad_inscripcion
-- visitas_consultas
-- informar_becas_hermanos
-- informar_horarios_trabajadores
-- informar_ayuda_informatica_ingles
-- informar_nivel_profesores
-# slots:
-#   email:
-#     type: unfeaturized
-#     influence_conversation: false
+- afirmacion:
+    use_entities: true
+- agradecimiento:
+    use_entities: true
+- despedida:
+    use_entities: true
+- negacion:
+    use_entities: true
+- saludo:
+    use_entities: true
+- requisitos_inscripcion:
+    use_entities: true
+- informar_servicios:
+    use_entities: true
+- informar_equipamiento_tecnologico:
+    use_entities: true
+- informar_asistencia:
+    use_entities: true
+- informar_examen_recuperatorio:
+    use_entities: true
+- informar_equivalencias:
+    use_entities: true
+- informar_intercambio_de_estudio:
+    use_entities: true
+- curso_ingreso:
+    use_entities: true
+- certificadas:
+    use_entities: true
+- evaluacion_coneau:
+    use_entities: true
+- plazos_inscripcion:
+    use_entities: true
+- informar_modalidad_inscripcion:
+    use_entities: true
+- visitas_consultas:
+    use_entities: true
+- informar_becas_hermanos:
+    use_entities: true
+- informar_horarios_trabajadores:
+    use_entities: true
+- informar_ayuda_informatica_ingles:
+    use_entities: true
+- informar_nivel_profesores:
+    use_entities: true
+- out_of_scope:
+    use_entities: true
+entities: []
+slots: {}
 responses:
   utter_saludo:
   - text: |
@@ -89,12 +113,15 @@ responses:
   utter_respuesta_visitas_consultas:
   - text: |
       Las puertas de la UGD están abiertas para todo aquel que desee conocerla.
-  # 
-# actions:
-# - '...'
-# - utter_greet
-# - utter_subscribed
-# forms:
-#   newsletter_form:
-#     email:
-#     - type: from_text
+  utter_out_of_scope:
+  - text: |
+      Perdón, no puedo ayudarte con esta pregunta!
+  utter_please_rephrase:
+  - text: |
+      Perdón, no pude entender eso. Podrías reformular tu pregunta?
+  utter_default:
+  - text: |
+      Perdón, no pude entender eso. Podrías reformular tu pregunta?
+actions: []
+forms: {}
+e2e_actions: []
